<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <TextView
                android:id="@+id/textview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#707070"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:paddingTop="50px"
                android:text="@string/reservation"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/instructions"
                android:textColor="#E9CBCB"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:hint="@string/groupSize"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:hint="@string/contactNo"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/seatType"
                android:textColor="#E9CBCB"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/seatType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="30px"
                android:paddingRight="30px">

                <RadioButton
                    android:id="@+id/smoking"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/smokingArea"
                    android:textColor="#FF6363" />

                <RadioButton
                    android:id="@+id/nonsmoking"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/nonsmokingArea"
                    android:textColor="#B19BFB" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textColor="#E9CBCB"
                android:textSize="16sp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/time"
                android:textColor="#E9CBCB"
                android:textSize="16sp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <Button
                android:id="@+id/btnBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/confirm"
                app:backgroundTint="#75C8BA" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/reset"
                app:backgroundTint="#F86B6B" />

            <TextView
                android:id="@+id/tvDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/booking"
                android:textColor="#B19BFB" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>